# metamodule-tf-osc

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  plugin-mm.json  plugin.cc  plugin.json  tf_osc.cc  tf_osc.hh  tf_osc_elements.cc
.claude/agents/: tflm-synth-engineer.md
.claude/skills/: tfexample-build-sim.md  tfexample-demos.md  tfexample-run-sim.md  tfexample-test.md  tfexample-train.md
docs/: ARCHITECTURE.md  DEVELOPMENT.md  FUTURE_WORK.md  SIMULATOR_PATCHES.md
models/: hello_world_model_data.cc  hello_world_model_data.h  wavetable_morph.tflite  wavetable_morph_model_data.cc  wavetable_morph_model_data.h
models/train/: train_siren_morph.py  train_siren_morph9.py  train_wavetable_morph.py
tests/: conftest.py  generate_samples.py  test_tfosc.py
